--- a/public/main.css
+++ b/public/main.css
@@ -43,9 +43,6 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.game-container {
   position: relative;
 }
 
@@ -57,33 +54,42 @@ button:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 
   z-index: 999;
+}
+
+.form-container h1 {
+  font-size: 96px;
+  text-align: center;
+  font-family: 'Silkscreen', cursive;
+  color: #fff;
+  margin-bottom: 16px;
 }
 
 .form {
   display: grid;
   grid-template-rows: 1fr;
   gap: 1rem;
-  background: #fff;
   padding: 0.75rem 1rem;
   border-radius: 4px;
 }
 
-.form h1 {
-  text-align: center;
+.form-field input {
+  padding: 0.5rem 0.5rem;
+  border-radius: 4px;
+  font-size: 24px;
+  width: 100%;
+  border: 0;
+  font-size: 24px;
 }
 
-.form-field input {
-  padding: 0.5rem 0.25rem;
-  border: 2px solid #000;
-  border-radius: 4px;
-  font-size: 16px;
+.form-field input:focus {
+  outline: 0;
 }
 
 .form-field label {
@@ -103,10 +109,8 @@ button:hover {
   left: 0.5rem;
   bottom: 0.5rem;
   width: 450px;
-  height: 40%;
+  max-height: 40%;
   padding: 0.25rem;
-  /* border: 2px solid rgba(0, 0, 0, 0.1); */
-
   display: flex;
   flex-direction: column;
 }
@@ -175,10 +179,11 @@ button:hover {
 
 .chat-input-container input {
   flex: 1;
-  padding: 0.5rem 0.25rem;
+  padding: 0.75rem 0.5rem;
   border: 2px solid transparent;
   border-radius: 4px;
-  background: rgba(0, 0, 0, .3)
+  background: #fff;
+  font-size: 18px;
 }
 
 .chat-input-container input:focus {
@@ -188,5 +193,5 @@ button:hover {
 
 .chat-input-container button {
   margin-left: 0.5rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.25rem;
 }
