--- a/public/main.css
+++ b/public/main.css
@@ -10,6 +10,7 @@ body,
   height: 100vh;
   width: 100vw;
   background: #1d1d1d;
+  font-family: 'Silkscreen', cursive;
 }
 
 button {
@@ -31,11 +32,12 @@ h5,
 p,
 label,
 input {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Silkscreen', cursive;
+
 }
 
 button:hover {
-  background: #505050;
+  background: #1d1d1d;
 }
 
 .container {
@@ -77,15 +79,18 @@ button:hover {
   gap: 1rem;
   padding: 0.75rem 1rem;
   border-radius: 4px;
+  width: 300px;
 }
 
 .form-field input {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 4px;
   font-size: 24px;
   width: 100%;
   border: 0;
   font-size: 24px;
+  height: 60px;
+  font-family: 'Silkscreen', cursive;
 }
 
 .form-field input:focus {
@@ -100,6 +105,7 @@ button:hover {
 }
 
 .form button {
+  height: 60px;
   padding: 0.5rem 1rem;
   font-size: 24px;
 }
@@ -109,7 +115,7 @@ button:hover {
   left: 0.5rem;
   bottom: 0.5rem;
   width: 450px;
-  max-height: 40%;
+  height: 400px;
   padding: 0.25rem;
   display: flex;
   flex-direction: column;
@@ -117,13 +123,12 @@ button:hover {
 
 .chat-messages {
   flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-bottom: 0.25rem;
 }
 
 .chat-message {
   width: 100%;
-  height: 50px;
 }
 
 .user-message,
@@ -194,4 +199,28 @@ button:hover {
 .chat-input-container button {
   margin-left: 0.5rem;
   padding: 0.5rem 1.25rem;
+}
+
+.players-container {
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  background: rgba(0, 0, 0, .3);
+  width: 250px;
+  height: 400px;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.players-container h2 {
+  margin-bottom: 1rem;
+}
+
+.connected-player {
+  color: #fff
+}
+
+.connected-player+.connected-player {
+  margin-top: .5rem;
 }
