feat: new folder archticture and separating game logic from engine logic

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <canvas id="canvas"></canvas>
     <div class="screen" id="join-screen">
-      <h1>MUNDIX</h1>
+      <h1>MUNDIXxx</h1>
       <form class="join-form" id="join-form">
         <div class="form-field">
           <input type="text" placeholder="Your name" name="username" id="username" maxlength="10">
@@ -42,15 +42,6 @@
       </div>
     </div>
   </div>
-  <script src="classes/InputController.js" defer></script>
-  <script src="classes/StateController.js" defer></script>
-  <script src="classes/UIController.js" defer></script>
-  <script src="classes/ScreenController.js" defer></script>
-  <script src="classes/Map.js" defer></script>
-  <script src="classes/Camera.js" defer></script>
-  <script src="classes/GameObject.js" defer></script>
-  <script src="classes/GameObjects.js" defer></script>
-  <script src="classes/Game.js" defer></script>
   <script src="index.js" defer></script>
 </body>
 
